fixing color contrast issue for nav

--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -28,6 +28,7 @@ header h1 {
 
 nav {
     background-color: var(--default-black);
+    color: var(--default-white);
 }
 
 nav ul {
